--- a/demo/pages/dnd.html
+++ b/demo/pages/dnd.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="example-tree">
-          <tree :data="treeData3" :options="treeOptions3">
+          <liquor-tree :data="treeData3" :options="treeOptions3">
             <div class="tree-scope" slot-scope="{ node }">- {{ node.text }} -</div>
           </tree>
         </div>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="example-tree">
-          <tree :data="treeData3" :options="treeOptions3">
+          <liquor-tree :data="treeData3" :options="treeOptions3">
             <div class="tree-scope" slot-scope="{ node }">- {{ node.text }} -</div>
           </tree>
         </div>
