--- a/demo/index.html
+++ b/demo/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <title>Liquor Tree</title>
+    <link rel="stylesheet" href="assets/style.css" />
+  </head>
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta charset="utf-8" />
-  <title>Liquor Tree</title>
-  <link rel="stylesheet" href="assets/style.css" />
-</head>
+  <body>
+    <div class="hello">Hi, This Is Liquor Tree Component. Try out the demos:</div>
 
-<body>
-  <div class="hello">Hi, This Is Vue Tree Component. Try out the demos:</div>
-
-  <div class="demo">
-    <li class="demo-item"><a href="pages/basic-usage.html">Basic Usage</a></li>
-    <li class="demo-item"><a href="pages/checkboxes.html">Checkboxes</a></li>
-    <li class="demo-item"><a href="pages/events.html">Events</a></li>
-    <li class="demo-item"><a href="pages/async.html">Async Data</a></li>
-    <li class="demo-item"><a href="pages/custom.html">Custom Node/Icons</a></li>
-    <li class="demo-item"><a href="pages/filtering.html">Filtering</a></li>
-    <li class="demo-item"><a href="pages/sorting.html">Sorting</a></li>
-    <li class="demo-item"><a href="pages/editing.html">Editing</a></li>
-    <li class="demo-item"><a href="pages/custom-theme.html">Custom theme</a></li>
-    <li class="demo-item"><a href="pages/vuex.html">Vuex Integration</a></li>
-    <li class="demo-item"><a href="pages/exporting.html">Exporting</a></li>
-    <li class="demo-item"><a href="pages/dnd.html">Drag & Drop</a></li>
-    <li class="demo-item"><a href="pages/updating.html">Updating</a></li>
-  </div>
-</body>
-
+    <div class="demo">
+      <li class="demo-item"><a href="pages/basic-usage.html">Basic Usage</a></li>
+      <li class="demo-item"><a href="pages/checkboxes.html">Checkboxes</a></li>
+      <li class="demo-item"><a href="pages/events.html">Events</a></li>
+      <li class="demo-item"><a href="pages/async.html">Async Data</a></li>
+      <li class="demo-item"><a href="pages/custom.html">Custom Node/Icons</a></li>
+      <li class="demo-item"><a href="pages/filtering.html">Filtering</a></li>
+      <li class="demo-item"><a href="pages/sorting.html">Sorting</a></li>
+      <li class="demo-item"><a href="pages/editing.html">Editing</a></li>
+      <li class="demo-item"><a href="pages/custom-theme.html">Custom theme</a></li>
+      <li class="demo-item"><a href="pages/vuex.html">Vuex Integration</a></li>
+      <li class="demo-item"><a href="pages/exporting.html">Exporting</a></li>
+      <li class="demo-item"><a href="pages/dnd.html">Drag & Drop</a></li>
+      <li class="demo-item"><a href="pages/updating.html">Updating</a></li>
+    </div>
+  </body>
 </html>
